# OMALDA5G

./: README.md
src/libpfcp/: Cargo.toml
src/libpfcp/src/: handlers.rs  messages.rs  models.rs
src/models/: android_domains.txt  evaluate.py  inference_server.py  main.py  models.py  preprocess_flow_stats.py  trainer.py  utils.py
src/p4src/: domain_spotter.p4  search_table_size.py  test_dns.py  test_dns_hash.py  test_dns_ul.py  ues.txt
src/traffic_collector/: 2.json  Cargo.toml  normalize_solution.json
src/traffic_collector/src/: flow5tuple.rs  flow_stats.rs  main.rs  stat_tracker.rs  ue_stats.rs  worker.rs
src/upf/: p4.json  tlds.txt  upf-config-local.yaml
src/upf/libpfcp/: Cargo.toml  feature.txt  feature_to_code.py
src/upf/libpfcp/src/: handlers.rs  helpers.rs  lib.rs  models.rs  senders.rs
src/upf/p4src/: build.sh  domain_spotter.p4  headers.p4  pdr.p4  settings.p4  settings_template.p4  xgboost.p4
src/upf/src/: main.rs
src/upf/src/datapath/: mod.rs
src/upf/src/datapath/tofino/: action_tables.rs  domain_watcher.rs  match_action_id.rs  mod.rs  pfcp_context.rs  usage_reporting.rs
src/upf/src/ir/: mod.rs
src/upf/src/n4/: mod.rs  node_handlers.rs  session_handlers.rs
src/upf/upf/: Cargo.toml  non-p4.json  p4.json  upf-config.yaml
src/upf/upf/src/: context.rs  dataplane_interface.rs  main.rs
src/upf/upf/src/ir/: mod.rs
src/upf/upf/src/n4/: node_handlers.rs
src/upf/upf/utils/: internet_gateway
src/upf/utils/: gtp_gateway
src/usf/: inference_server.py  main.py  models.py  preprocess_flow_stats.py  trainer.py  usf_config.yaml
(+17 files in other folders)
