[package]
name = "traffic_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2"
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
etherparse = "0.16"
chrono = { version = "*", features = ["serde"] }
libc = "*"
hex = "*"
aes = "0.8"
aes-gcm = { version = "0.10.3", features = ["aes"] }
cbc = "0.1"
quantiles = "0.7"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
dashmap = "6"
cidr = "0.3"
lazy_static = "1"
futures = "0.3"
clap = { version = "4.5.24", features = ["derive"] }
crossbeam = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-rt = "2"
